# pokemon-api

./: CONTRIBUTING.md  Cargo.toml  README.md  not_supplied.json  pokemon.db  pokemon_types.json
src/: handler.rs  main.rs  model.rs  utils.rs
src/handlers/: abilities.rs  items.rs  locations.rs  mod.rs  moves.rs  pokemon.rs  types.rs  version.rs
