[package]
name = "pokemon-api"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
warp = "0.3.7"
chrono = { version = "0.4.38", features = ["serde"] }
pretty_env_logger = "0.5.0"
uuid = { version = "1.11.0", features = ["v4"] }

